# MaxSecu

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
crates/_spike-codecs/: Cargo.toml  SPIKE_NOTES.md
crates/_spike-codecs/src/: main.rs
crates/admin-core/: Cargo.toml
crates/admin-core/src/: control.rs  directory.rs  lib.rs  recovery.rs  recovery_seal.rs  subtree.rs  sweep.rs
crates/admin-core/tests/: ceremony.rs
crates/client-app/: .gitignore  Cargo.toml  build.rs  deny.toml  tauri.conf.json
crates/client-app/capabilities/: default.json
crates/client-app/src/: admin.rs  blob_cache.rs  bootstrap.rs  ceremony.rs  config.rs  contacts.rs  content_cache.rs  direct_link.rs  directory.rs  disk_free.rs  download.rs  dto.rs  error.rs  ffmpeg_bin.rs  fragment_cache.rs  http_client.rs  index.rs  jobs.rs  keystore.rs  layout.rs  lib.rs  main.rs  media_cache.rs  ram.rs  recipients.rs  recovery_pin.rs  recovery_share.rs  revocations.rs  session.rs  session_seal.rs  sink.rs  state.rs  stream.rs  thumb_cache.rs  timeout.rs  tofu.rs  tor.rs  transparency.rs  transport.rs  upload.rs  (+2 more)
crates/client-app/src/commands/: admin.rs  auth.rs  bootstrap.rs  bundle.rs  connection.rs  delete_cmd.rs  dialog.rs  download_cmd.rs  feed.rs  mod.rs  pool.rs  recovery_custody.rs  recovery_login.rs  register.rs  renew.rs  search.rs  settings.rs  share.rs  startup.rs  stubs.rs  upload.rs  video.rs  viewer.rs
crates/client-app/tests/: bootstrap_admin_e2e.rs  browse_view_e2e.rs  compat.rs  connect_login_e2e.rs  recovery_custody_e2e.rs  streaming_upload_e2e.rs  universal_video_e2e.rs  upload_e2e.rs  video_e2e.rs  video_upload_e2e.rs
crates/client-app/ui/: CODEX-REFINE-BRIEF.md  FRONTEND-GUIDE.md  MARAUDERS-MAP-BRIEF.md  PIZZA-BRIEF.md  boot.js  index.html  package-lock.json  package.json  styles.css  styles.pizza.css  styles.slot3.css  tsconfig.json
crates/client-app/ui/scripts/: copy-assets.mjs
crates/client-app/ui/src/: a11y.test.ts  main.ts
crates/client-core/: Cargo.toml
crates/client-core/src/: auth.rs  budget.rs  directory.rs  download.rs  error.rs  identity.rs  keyblob.rs  lib.rs  limits.rs  media.rs  password.rs  reshare.rs  revocation.rs  rotate.rs  sandbox.rs  sanitize.rs  seedblob.rs  sink.rs  transparency.rs  update.rs  upload.rs  util.rs  version_memory.rs  video.rs
crates/client-core/tests/: properties.rs
crates/client-e2e/: Cargo.toml
crates/client-e2e/src/: lib.rs
crates/client-e2e/tests/: bootstrap_admin_e2e.rs  browse_view_e2e.rs  bundle_e2e.rs  connect_login_e2e.rs  full_flow_e2e.rs  generic_download_parallel_e2e.rs  recovery_login_e2e.rs  register_e2e.rs  reshare_e2e.rs  resume_upload_e2e.rs  streaming_upload_e2e.rs  tor_diag.rs  tor_login_e2e.rs  tor_route_e2e.rs  transparency_alarm_e2e.rs  upload_e2e.rs  upload_recovery_wrap_e2e.rs  video_e2e.rs  video_upload_e2e.rs
crates/compat/: Cargo.toml
crates/compat/src/: lib.rs
crates/compat/tests/: env_surface.rs  golden_open.rs  http_wire.rs  interop_matrix.rs  schema_equivalence.rs  value_locks.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  dek.rs  delegation.rs  hash.rs  hybrid.rs  kdf.rs  lib.rs  merkle.rs  pin_fp.rs  pwkdf.rs  rng.rs  shamir.rs  sign.rs  wrap.rs
crates/crypto/tests/: properties.rs
crates/encoding/: Cargo.toml
crates/encoding/src/: error.rs  lib.rs  primitives.rs  structs.rs  types.rs
crates/encoding/tests/: golden.rs  properties.rs  vectors.rs
crates/encoding/tests/fixtures/: canonical_vectors.tsv
crates/media-launcher/: Cargo.toml
crates/media-launcher/src/: ffmpeg_args.rs  lib.rs  probe.rs  transcode_opts.rs  win32.rs
crates/media-launcher/tests/: acl_write_owner_fix_windows.rs  ffmpeg_confine_windows.rs  file_acl_windows.rs  gpu_confined_spike.rs
crates/media-transcode-worker/: Cargo.toml
crates/media-transcode-worker/src/: lib.rs  main.rs  remux.rs
crates/media-transcode-worker/tests/: containment_transcode_windows.rs  ingest_remux.rs  transcode_pipeline.rs
crates/media-transcode-worker/tests/common/: mod.rs
crates/media-worker/: Cargo.toml
crates/media-worker/fuzz/: .gitignore  Cargo.toml  README.md
crates/media-worker/fuzz/crash-repros/: README.md
crates/media-worker/src/: lib.rs  main.rs  session.rs  win32.rs
crates/media-worker/tests/: audio_session.rs  bombs_video.rs  containment_video_windows.rs  containment_windows.rs  fixture_smoke.rs  fuzz_replay.rs  oom_kill_windows.rs  resilient_oom_windows.rs  subprocess.rs  video_session.rs  video_subprocess.rs
crates/portable-server/: Cargo.toml
crates/portable-server/src/: bootstrap.rs  bootstrap_pins.rs  config.rs  delegation_setup.rs  layout.rs  lib.rs  main.rs  pki.rs  run.rs
crates/portable-server/tests/: boot_smoke.rs  bootstrap_pins_e2e.rs
crates/server/: Cargo.toml
crates/server/src/: audit.rs  auth.rs  blob.rs  control.rs  delegation.rs  detect.rs  dropbox_tier.rs  error.rs  files.rs  http.rs  lib.rs  pg.rs  ratelimit.rs  recovery.rs  recovery_account.rs  reg_keys.rs  serve.rs  store.rs  tier.rs  writeback_tier.rs
crates/server/tests/: chunk_limit_discard_quota.rs  directory_e2e.rs  enrollment_e2e.rs  enrollment_transparency_e2e.rs  file_e2e.rs  file_records.rs  pg_store.rs  phase6_integrity_ops_e2e.rs  phase7_hardening_e2e.rs  recovery_login_e2e.rs  sanitized_errors.rs  sharing.rs  sharing_e2e.rs  sink_publish_e2e.rs  tls_channel_binding.rs
crates/sink-server/: Cargo.toml
crates/sink-server/src/: anchor.rs  chain.rs  dirlog.rs  http.rs  lib.rs  position.rs  serve.rs
crates/sink-server/tests/: dir_log_enrollment_e2e.rs  sink_e2e.rs
docs/: api.md  (+29 more)
tools/ceremony-harness/: Cargo.toml
tools/ceremony-harness/src/: lib.rs
tools/demo-seed/: Cargo.toml
tools/demo-seed/src/: main.rs
tools/live-smoke/: Cargo.toml
tools/live-smoke/src/: main.rs  net.rs  steps.rs
tools/maxsecu-setup/: Cargo.toml  build.rs  setup.manifest
tools/maxsecu-setup/src/: fetch.rs  lib.rs  main.rs  setup.rs
tools/maxsecu-setup/tests/: d5_ceremony_e2e.rs  fetch_pins_e2e.rs  renew_delegation_e2e.rs  setup_e2e.rs
(+273 files in other folders)
