# MaxSecu cargo workspace.
#
# Phase 0 (DESIGN.md §17) ships two security-critical library crates that are
# shared verbatim by the client core, the server, and the air-gapped ceremony
# tools (docs/stack.md §1.6/§2.1): there is exactly ONE canonical-encoder and
# ONE set of crypto primitive wrappers in the system.
[workspace]
resolver = "2"
members = [
    "crates/encoding",
    "crates/crypto",
    "crates/client-core",
    "crates/admin-core",
    "crates/server",
    "crates/media-launcher",
    "crates/media-worker",
    "crates/sink-server",
    "crates/client-app",
    "crates/portable-server",
    "tools/ceremony-harness",
]

[workspace.package]
edition = "2021"
rust-version = "1.96"
publish = false

# Pinned, audited dependencies live here so every member resolves the same
# version (docs/stack.md §1.3 "pin and audit"). Add-on crates are introduced
# per-crate as their phase arrives.
[workspace.dependencies]
# Unicode NFC normalization for the canonical `text` type (encoding-spec §2).
unicode-normalization = "0.1"
# Shared async + TLS + cert + serde pins (versions already resolved in-tree by
# server/sink-server/client-app/client-core). Hoisted into the workspace in
# Phase 6 so `portable-server` (the runnable launcher) reuses the exact same
# versions — one version workspace-wide, no new external version for cargo-deny.
# `tokio` carries no default features here; each consumer opts into the runtime
# features it needs (a bin can extend the workspace pin with `features = [...]`).
tokio = { version = "1" }
# TLS 1.3 only, `aws-lc-rs` provider (ring-banned, deny.toml) — matches the
# server/sink/client transport so the graph stays ring-free.
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
# Self-signed DEV pinned cert generation; `aws_lc_rs` (not rcgen's default ring).
rcgen = { version = "0.13", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[profile.release]
# Deterministic-ish release profile; reproducible-build flags are finalized in
# Phase 6 (§8 control 2). Kept conservative here.
opt-level = 3
overflow-checks = true
