[package]
name = "maxsecu-client-app"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "MaxSecu media client (Tauri shell over client-core TCB)."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
maxsecu-client-core = { path = "../client-core", features = ["net"] }
maxsecu-crypto = { path = "../crypto" }
maxsecu-encoding = { path = "../encoding" }
# The codec-free media-decode launcher: the `VideoSessionDecoder` trait + the
# AppContainer / subprocess SPAWN launchers. This crate links NO codecs
# (rav1d / symphonia live only in `media-worker`), so this key-holding process
# CANNOT have the decoder unified into it by Cargo feature resolution — the
# decoder-free-main-process guarantee is structural, not feature-conditional. The
# main process drives video decode by spawning the confined worker binary; the
# codecs only ever run inside that isolated subprocess.
maxsecu-media-launcher = { path = "../media-launcher" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
zeroize = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
base64 = "0.22"
# Physical-RAM read for the in-memory decrypted-content cache sizing (the cap is
# bounded to total-RAM − 6 GB). The ONLY new dependency in the UI-overhaul work;
# flagged for `cargo deny`/`cargo audit`. Pure-Rust on Windows (no new C).
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[dev-dependencies]
rcgen = { version = "0.13", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }
maxsecu-server = { path = "../server" }
maxsecu-ceremony-harness = { path = "../../tools/ceremony-harness" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[lints.rust]
unsafe_code = "forbid"
