# The CLIENT workspace root. Split out of the top-level (server) workspace so this
# graph's `arti-client` ŌåÆ `libsqlite3-sys 0.37` never has to resolve against the
# server's `sqlx` ŌåÆ `0.30` under Cargo's `links = "sqlite3"` uniqueness rule. The
# client has no SQL of its own, so isolating its lockfile removes the collision
# with zero cost to correctness. `client-e2e` (the relocated clientŌåöserver e2e
# suites) is a member here; it links the server WITHOUT the postgres feature.
[workspace]
resolver = "2"
members = [".", "../client-e2e", "../../tools/maxsecu-setup", "../../tools/live-smoke"]

[workspace.package]
edition = "2021"
rust-version = "1.96"

[package]
name = "maxsecu-client-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "MaxSecu media client (Tauri shell over client-core TCB)."

[features]
# Bake the vendored static ffmpeg into the binary via `include_bytes!` (see
# `src/ffmpeg_bin.rs`). Default-on so CI / release builds embed it; turn it off
# (`--no-default-features`) to build the workspace without
# `vendor/ffmpeg/ffmpeg.exe` present (the gitignored binary fetched by
# `scripts/fetch-ffmpeg.ps1`), in which case `ensure_ffmpeg` fail-closes.
default = ["embed-ffmpeg"]
embed-ffmpeg = []
# Build the crate with a NON-SECURE, clearly-labelled compile-time TEST recovery
# pin when no `recovery_pin.bin` is present (see `build.rs`/`src/recovery_pin.rs`).
# For tests only ŌĆö a real build MUST embed a genuine pin (fail-closed otherwise).
unpinned-dev = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Only used by the `unpinned-dev` branch of `build.rs`: derive the NON-SECURE test
# recovery pin's public keys from fixed, well-known seeds (X25519 pub from a fixed
# scalar + ML-KEM pub from a fixed seed), so the test pin is a REAL keypair whose
# private half tests can reconstruct (via `recovery_pin::test_recovery_secret_seeds`).
# Not linked into the crate itself ŌĆö build-script host dep only.
maxsecu-crypto = { path = "../crypto" }

[dependencies]
maxsecu-client-core = { path = "../client-core", features = ["net"] }
maxsecu-crypto = { path = "../crypto" }
maxsecu-encoding = { path = "../encoding" }
# The codec-free media-decode launcher: the `VideoSessionDecoder` trait + the
# AppContainer / subprocess SPAWN launchers. This crate links NO codecs
# (rav1d / symphonia live only in `media-worker`), so this key-holding process
# CANNOT have the decoder unified into it by Cargo feature resolution ŌĆö the
# decoder-free-main-process guarantee is structural, not feature-conditional. The
# main process drives video decode by spawning the confined worker binary; the
# codecs only ever run inside that isolated subprocess.
maxsecu-media-launcher = { path = "../media-launcher" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
zeroize = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
base64 = "0.22"
# Physical-RAM read for the in-memory decrypted-content cache sizing (the cap is
# bounded to total-RAM ŌłÆ 6 GB). The ONLY new dependency in the UI-overhaul work;
# flagged for `cargo deny`/`cargo audit`. Pure-Rust on Windows (no new C).
sysinfo = { version = "0.33", default-features = false, features = ["system", "disk"] }
# Native OS "open file" dialog for the upload BrowseŌĆ” button. Used only by the
# `pick_file` command; returns a path the UI drops into the file-path field ŌĆö no
# bytes cross the dialog. default-features off keeps it lean (the Win32 file-dialog
# backend is cfg(windows) and always compiled; no GTK/portal pull-in).
rfd = { version = "0.15", default-features = false }
# The direct-link download route (`direct_link.rs`): the transport seam trait
# needs an async fn in a dyn-friendly-shaped trait, mirroring
# `server::dropbox_tier::DropboxHttp` (same crate, same version).
async-trait = "0.1"
# Public WebPKI root set for the direct-link fetcher: a brokered link points at a
# PUBLIC cloud host (e.g. Dropbox's `dl.dropboxusercontent.com`), not the pinned
# self-signed app-server cert, so it needs the Mozilla root bundle rather than the
# pinned cert (mirrors `server::dropbox_tier::HyperDropboxHttp`; CDLA-Permissive-2.0
# data license already allowed in `deny.toml`).
webpki-roots = "1"
# In-process Tor client for the TorOnly download route (Part C). This is the whole
# reason client-app is its own workspace: arti pulls a transport-only bundled-C
# SQLite (tor-dirmgr ŌåÆ rusqlite) whose libsqlite3-sys 0.37 cannot coexist with the
# server's sqlx 0.30 in one lockfile. `rustls` (not native-tls) keeps the TLS stack
# aligned with the pinned aws-lc-rs transport; onion-service-client is not needed
# (we reach a normal host:port via a Tor exit). See deny.toml for the arti tree.
# `static-sqlite` builds arti's dir-cache SQLite from source (rusqlite/bundled) so
# the link needs no system sqlite3.lib ŌĆö required on Windows where none is present.
arti-client = { version = "0.44", default-features = false, features = ["tokio", "rustls", "static-sqlite"] }
tor-rtcompat = { version = "0.44", default-features = false, features = ["tokio", "rustls"] }

[dev-dependencies]
# The backward-compatibility gate's shared helpers (`tests/compat.rs`): the frozen
# corpus root + `corpus.lock` verification, shared with the root workspace's
# `crates/compat`. Its LIBRARY has no `maxsecu-server`/`sqlx` dependency (those are
# dev-deps of that crate, and dev-deps do not propagate), so this does NOT drag
# sqlx into this arti-bearing workspace ŌĆö the whole reason for the workspace split.
maxsecu-compat = { path = "../compat" }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }
# Pure-Rust png/jpeg for a client-app unit test that synthesizes a source image
# (src/upload.rs). Kept here for the lib's own tests; the e2e crate depends on it
# separately.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# NOTE: the clientŌåöserver e2e tests (which need `maxsecu-server` +
# `maxsecu-ceremony-harness`) now live in the sibling `maxsecu-client-e2e` crate,
# which links the server WITHOUT its postgres feature so it stays sqlx-free and can
# share this workspace's lockfile with `arti-client`.
# Test-only: `direct_link`'s unit tests stand up a tiny in-process HTTP/1.1 stub
# server (the pinned-server side of the seam) so the broker POST + proxy GET are
# genuinely round-tripped over the wire, not just asserted against a hand-built
# request. Additive feature unification means `server` is compiled in only for
# `--tests`/dev builds, never the shipped binary (no listener code in `main`).
hyper = { version = "1", features = ["server"] }

[lints.rust]
unsafe_code = "forbid"
