[package]
name = "maxsecu-client-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "MaxSecu client core: identity, local_key_blob, login proof (DESIGN §9, Phase 1)."

[dependencies]
maxsecu-encoding = { path = "../encoding" }
maxsecu-crypto = { path = "../crypto" }
zeroize = "1" # wipe transient plaintext key material (DESIGN §8.1)
# Canonical image transcode + thumbnail/preview (D30, Phase 4b). Pure-Rust
# png/jpeg only (default-features off drops gif/webp/avif and any C codec) —
# keeps the no-C posture; the ffmpeg video path stays behind the Transcoder
# trait as a separate carve-out decision.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
proptest = "1"
# Test-only: build real, validly-linked control-log chains to feed the
# client-side verifier (the offline issuer side; not a runtime dependency).
maxsecu-admin-core = { path = "../admin-core" }

[lints.rust]
unsafe_code = "forbid"
