[package]
name = "maxsecu-client-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "MaxSecu client core: identity, local_key_blob, login proof (DESIGN §9, Phase 1)."

[dependencies]
maxsecu-encoding = { path = "../encoding" }
maxsecu-crypto = { path = "../crypto" }
zeroize = "1" # wipe transient plaintext key material (DESIGN §8.1)
# Canonical image transcode + thumbnail/preview (D30, Phase 4b). Pure-Rust
# png/jpeg only (default-features off drops gif/webp/avif and any C codec) —
# keeps the no-C posture; the ffmpeg video path stays behind the Transcoder
# trait as a separate carve-out decision.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Optional `net` feature (P6.4): a real pinned-TLS HttpSinkClient for the external
# sink (docs/sink-interface.md §3). All versions/features mirror the app server
# (crates/server/Cargo.toml) so the workspace resolves ONE copy of each and the
# default (no-`net`) build stays pure — no TLS stack at all. aws-lc-rs is the only
# sanctioned provider (deny.toml bans ring/openssl).
tokio = { version = "1", features = ["rt", "net", "io-util"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"], optional = true }
hyper = { version = "1", features = ["client", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
serde_json = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

[features]
# Test-only: expose `Identity::from_test_seeds` (reconstruct an Identity from raw
# secret seeds). Compiled out of production builds; enabled only by the client↔server
# e2e suite (`client-e2e`) so its full-flow capstone can build the recovery Identity
# whose enc half equals the embedded `unpinned-dev` recovery pin. MUST NEVER ship.
test-support = []
# The pinned-TLS sink HTTP client. Default build pulls none of this (stays pure).
net = [
    "dep:tokio",
    "dep:tokio-rustls",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:serde_json",
    "dep:base64",
]

[dev-dependencies]
proptest = "1"
# Test-only: build real, validly-linked control-log chains to feed the
# client-side verifier (the offline issuer side; not a runtime dependency).
maxsecu-admin-core = { path = "../admin-core" }

[lints.rust]
unsafe_code = "forbid"
