[package]
name = "maxsecu-client-e2e"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Client↔server end-to-end tests. Links the server WITHOUT the postgres/sqlx feature so it coexists with arti-client (client-app) in this workspace's lockfile."
# This crate sits outside the client-workspace root dir (crates/client-app), so it
# must name its owning workspace explicitly — otherwise Cargo's ancestor walk binds
# it to the top-level (server) workspace.
workspace = "../client-app"

[dependencies]

[dev-dependencies]
# `default-features = false` turns OFF client-app's default `embed-ffmpeg`, whose
# `include_bytes!(vendor/ffmpeg/ffmpeg.exe)` cannot compile without the gitignored
# vendored binary. None of these client↔server e2e tests need the embedded codec;
# `ensure_ffmpeg` fail-closes at runtime when the binary is absent. The `-p
# maxsecu-client-app --no-default-features` CLI form the runbook mentions only
# applies when client-app is the crate under test — for the client-e2e binaries
# the flag must live on this dependency edge (a transitive default is not
# disabled by a CLI `--no-default-features` on the e2e package).
maxsecu-client-app = { path = "../client-app", default-features = false }
maxsecu-client-core = { path = "../client-core", features = ["net"] }
maxsecu-crypto = { path = "../crypto" }
maxsecu-encoding = { path = "../encoding" }
maxsecu-media-launcher = { path = "../media-launcher" }
maxsecu-ceremony-harness = { path = "../../tools/ceremony-harness" }
# CRITICAL: default-features = false → no `postgres` → no `sqlx` → no
# libsqlite3-sys 0.30, so the server links cleanly alongside arti-client's 0.37 in
# this (client) workspace lock. The e2e tests only ever use MemoryStore.
maxsecu-server = { path = "../server", default-features = false }
# T4 reshare e2e (`reshare_e2e.rs`): the reshare revocation anchor is fetched from
# a REAL out-of-band sink (spec §0 D-OQ1), advanced by REAL dual-controlled
# control-log records. `sink-server`/`admin-core` are sqlx-free (encoding+crypto
# only, sink-server adds client-core "net"), so they coexist with arti-client in
# this (client) workspace lock exactly like the server does.
maxsecu-sink-server = { path = "../sink-server" }
maxsecu-admin-core = { path = "../admin-core" }
base64 = "0.22"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
rcgen = { version = "0.13", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[lints.rust]
unsafe_code = "forbid"
